@@ -729,7 +729,7 @@
 \RequirePackage[colorlinks,breaklinks,
                 linkcolor=InnerLinkColor,filecolor=OuterLinkColor,
                 menucolor=OuterLinkColor,pagecolor=OuterLinkColor,
-                urlcolor=OuterLinkColor]{hyperref}
+                urlcolor=OuterLinkColor,citecolor=InnerLinkColor]{hyperref}
 
 % From docutils.writers.latex2e
 \providecommand{\DUspan}[2]{%
